<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ovh.mythmc</groupId>
    <artifactId>social</artifactId>
    <version>0.5.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>api</module>
        <module>platform-bukkit</module>
        <module>platform-common</module>
        <module>platform-paper</module>
        <module>api-bukkit</module>
    </modules>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>

                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                    </transformers>
                    <relocations>
                        <relocation>
                            <pattern>de.exlll</pattern>
                            <shadedPattern>ovh.mythmc.social.libs.de.exlll</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.snakeyaml</pattern>
                            <shadedPattern>ovh.mythmc.social.libs.org.snakeyaml</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>ovh.mythmc.social.libs.org.bstats</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.j256</pattern>
                            <shadedPattern>ovh.mythmc.social.libs.com.j256</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>

                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <name>social</name>
    <description>Enhance your server's communication with social. Modular, customizable and feature-packed.</description>
    <url>https://github.com/myth-MC/social</url>
    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html#license-text</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>U8092</name>
            <email>uisl8092@gmail.com</email>
            <organization>myth-MC</organization>
            <organizationUrl>https://github.com/myth-MC</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/myth-MC/social.git</connection>
        <developerConnection>scm:git:ssh://github.com/myth-MC/social.git</developerConnection>
        <url>https://github.com/myth-MC/social</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>central-release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.4.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <tokenAuth>true</tokenAuth>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.0</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.6.3</version>
                        <executions>
                            <execution>
                                <id>attach-javadoc</id>
                                <goals>
                                <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <stylesheet>java</stylesheet>
                            <doclint>none</doclint>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <distributionManagement>
                <repository>
                    <id>myth-mc-releases</id>
                    <url>https://repo.mythmc.ovh/releases</url>
                </repository>
            </distributionManagement>
        </profile>
        <profile>
            <id>snapshot</id>
            <distributionManagement>
                <repository>
                    <id>myth-mc-snapshots</id>
                    <url>https://repo.mythmc.ovh/snapshots</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>

        <repository>
            <id>myth-mc-releases</id>
            <url>https://repo.mythmc.ovh/repositories/releases/</url>
        </repository>

        <repository>
            <id>myth-mc-snapshots</id>
            <url>https://repo.mythmc.ovh/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.18.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.18.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-plain</artifactId>
            <version>4.18.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-gson</artifactId>
            <version>4.18.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>ovh.mythmc</groupId>
            <artifactId>gestalt-api</artifactId>
            <version>0.2.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>ovh.mythmc</groupId>
            <artifactId>callbacks-lib</artifactId>
            <version>0.1.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>ovh.mythmc</groupId>
            <artifactId>gestalt-loader</artifactId>
            <version>0.2.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>